Fix contrast and ref=noreferrer issue

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,7 +17,7 @@
 $body-bg: #f8f9fa;
 $body-color: #333333;
 $secondary: #e6dd3b;
-$primary: #29bb89;
+$primary: #1b7556;
 
 $font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
   "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
